# modular-rag-mcp-server

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: settings.yaml
docs/: README.md  _collect_dashboard_data.py  _gen_html_report.py  dashboard_report.html
docs/screenshots/: .gitkeep
scripts/: evaluate.py  ingest.py  query.py
src/core/: settings.py
src/core/trace/: trace_collector.py
src/libs/embedding/: embedding_factory.py  huggingface_embedding.py
src/libs/evaluator/: custom_evaluator.py
src/libs/loader/: base_loader.py  pdf_loader.py
src/mcp_server/: protocol_handler.py
src/mcp_server/tools/: __init__.py  auto_coder.py  code_reviewer.py  deploy.py  doc_generator.py  ingest_documents.py  package.py  qa_tester.py  query_knowledge_hub.py  resume_writer.py  setup.py
src/observability/: logger.py
src/observability/dashboard/services/: trace_service.py
src/observability/evaluation/: eval_runner.py
tests/fixtures/: golden_test_set.json
