[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modular-rag-mcp-server"
version = "0.1.0"
description = "A modular RAG (Retrieval-Augmented Generation) MCP Server for knowledge management"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "李政扬", email = "lizhengyangasasds@gmail.com" }
]
keywords = ["mcp", "rag", "retrieval", "llm", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "numpy>=1.24",

    # LLM & Embedding
    "openai>=1.0",
    "anthropic>=0.18",
    "sentence-transformers>=2.2",
    "huggingface-hub>=0.19",

    # Vector Store & Retrieval
    "chromadb>=0.4.0",
    "rank-bm25>=0.2",

    # Document Processing
    "pypdf>=4.0",
    "markitdown[pdf]>=0.1.0",
    "Pillow>=10.0",

    # Text Processing
    "jieba>=0.42",

    # MCP Protocol
    "mcp>=1.0.0",

    # Chunking
    "langchain-text-splitters>=0.3.0",

    # Observability
    "streamlit>=1.30.0",

    # Evaluation
    "ragas>=0.1.0",
    "datasets>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.14",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "openai>=1.0",
]

[project.scripts]
mcp-server = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (full system tests)",
    "llm: marks tests that require real LLM API calls (deselect with '-m \"not llm\"')",
    "slow: Slow tests that should be run less frequently",
]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
